--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "http://munAlexey.github.io/mesto-react",
+  "homepage": "http://munAlexey.github.io/",
   "name": "mesto-react",
   "version": "0.1.0",
   "private": true,
